grammar/PhysicsParser.py
# Generated from Physics.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PhysicsParser ( Parser ):

    grammarFileName = "Physics.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'->'", "'['", "']'", "'law'", 
                     "'('", "')'", "':'", "'<'", "'&'", "'>'", "'<-'", "'system'", 
                     "'func'", "'=>'", "','", "'if'", "'elsif'", "'else'", 
                     "'while'", "'for'", "'foreach'", "'print'", "'Or'", 
                     "'And'", "'=='", "'!='", "'>='", "'<='", "'+'", "'-'", 
                     "'*'", "'/'", "'//'", "'^'", "'?'", "'Not'", "'particle'", 
                     "'field'", "'float'", "'int'", "'bool'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BOOLEAN", "ID", "INT", "FLOAT", "COMMENT", "WS", 
                      "NL", "INDENT", "DEDENT" ]

    RULE_prog = 0
    RULE_statement = 1
    RULE_declStmt = 2
    RULE_assignStmt = 3
    RULE_target = 4
    RULE_lawDecl = 5
    RULE_lawAssignStmt = 6
    RULE_attrAssignStmt = 7
    RULE_callStmt = 8
    RULE_systemDecl = 9
    RULE_funcDecl = 10
    RULE_paramList = 11
    RULE_param = 12
    RULE_controlStmt = 13
    RULE_ifStmt = 14
    RULE_whileStmt = 15
    RULE_forStmt = 16
    RULE_foreachStmt = 17
    RULE_printStmt = 18
    RULE_returnStmt = 19
    RULE_emptyLine = 20
    RULE_expr = 21
    RULE_logicOr = 22
    RULE_logicAnd = 23
    RULE_equality = 24
    RULE_compare = 25
    RULE_addSub = 26
    RULE_mulDiv = 27
    RULE_power = 28
    RULE_unary = 29
    RULE_vector = 30
    RULE_atom = 31
    RULE_argList = 32
    RULE_type = 33
    RULE_returnType = 34
    RULE_block = 35
    RULE_dottedID = 36

    ruleNames =  [ "prog", "statement", "declStmt", "assignStmt", "target", 
                   "lawDecl", "lawAssignStmt", "attrAssignStmt", "callStmt", 
                   "systemDecl", "funcDecl", "paramList", "param", "controlStmt", 
                   "ifStmt", "whileStmt", "forStmt", "foreachStmt", "printStmt", 
                   "returnStmt", "emptyLine", "expr", "logicOr", "logicAnd", 
                   "equality", "compare", "addSub", "mulDiv", "power", "unary", 
                   "vector", "atom", "argList", "type", "returnType", "block", 
                   "dottedID" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    BOOLEAN=44
    ID=45
    INT=46
    FLOAT=47
    COMMENT=48
    WS=49
    NL=50
    INDENT=51
    DEDENT=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PhysicsParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PhysicsParser.StatementContext)
            else:
                return self.getTypedRuleContext(PhysicsParser.StatementContext,i)


        def getRuleIndex(self):
            return PhysicsParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PhysicsParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1169605509964320) != 0):
                self.state = 74
                self.statement()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(PhysicsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declStmt(self):
            return self.getTypedRuleContext(PhysicsParser.DeclStmtContext,0)


        def assignStmt(self):
            return self.getTypedRuleContext(PhysicsParser.AssignStmtContext,0)


        def attrAssignStmt(self):
            return self.getTypedRuleContext(PhysicsParser.AttrAssignStmtContext,0)


        def callStmt(self):
            return self.getTypedRuleContext(PhysicsParser.CallStmtContext,0)


        def lawDecl(self):
            return self.getTypedRuleContext(PhysicsParser.LawDeclContext,0)


        def systemDecl(self):
            return self.getTypedRuleContext(PhysicsParser.SystemDeclContext,0)


        def lawAssignStmt(self):
            return self.getTypedRuleContext(PhysicsParser.LawAssignStmtContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(PhysicsParser.FuncDeclContext,0)


        def controlStmt(self):
            return self.getTypedRuleContext(PhysicsParser.ControlStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(PhysicsParser.PrintStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(PhysicsParser.ReturnStmtContext,0)


        def emptyLine(self):
            return self.getTypedRuleContext(PhysicsParser.EmptyLineContext,0)


        def getRuleIndex(self):
            return PhysicsParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PhysicsParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.declStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.assignStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.attrAssignStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.callStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.lawDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 87
                self.systemDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 88
                self.lawAssignStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 89
                self.funcDecl()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 90
                self.controlStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 91
                self.printStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 92
                self.returnStmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 93
                self.emptyLine()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(PhysicsParser.TypeContext,0)


        def ID(self):
            return self.getToken(PhysicsParser.ID, 0)

        def NL(self):
            return self.getToken(PhysicsParser.NL, 0)

        def expr(self):
            return self.getTypedRuleContext(PhysicsParser.ExprContext,0)


        def getRuleIndex(self):
            return PhysicsParser.RULE_declStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclStmt" ):
                listener.enterDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclStmt" ):
                listener.exitDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclStmt" ):
                return visitor.visitDeclStmt(self)
            else:
                return visitor.visitChildren(self)




    def declStmt(self):

        localctx = PhysicsParser.DeclStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.type_()
            self.state = 97
            self.match(PhysicsParser.ID)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 98
                self.match(PhysicsParser.T__0)
                self.state = 99
                self.expr()


            self.state = 102
            self.match(PhysicsParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def target(self):
            return self.getTypedRuleContext(PhysicsParser.TargetContext,0)


        def expr(self):
            return self.getTypedRuleContext(PhysicsParser.ExprContext,0)


        def NL(self):
            return self.getToken(PhysicsParser.NL, 0)

        def getRuleIndex(self):
            return PhysicsParser.RULE_assignStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)




    def assignStmt(self):

        localctx = PhysicsParser.AssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.target()
            self.state = 105
            self.match(PhysicsParser.T__0)
            self.state = 106
            self.expr()
            self.state = 107
            self.match(PhysicsParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TargetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PhysicsParser.RULE_target

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AttrTargetContext(TargetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PhysicsParser.TargetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def dottedID(self):
            return self.getTypedRuleContext(PhysicsParser.DottedIDContext,0)

        def ID(self):
            return self.getToken(PhysicsParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(PhysicsParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttrTarget" ):
                listener.enterAttrTarget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttrTarget" ):
                listener.exitAttrTarget(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrTarget" ):
                return visitor.visitAttrTarget(self)
            else:
                return visitor.visitChildren(self)


    class VarTargetContext(TargetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PhysicsParser.TargetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def dottedID(self):
            return self.getTypedRuleContext(PhysicsParser.DottedIDContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarTarget" ):
                listener.enterVarTarget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarTarget" ):
                listener.exitVarTarget(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarTarget" ):
                return visitor.visitVarTarget(self)
            else:
                return visitor.visitChildren(self)



    def target(self):

        localctx = PhysicsParser.TargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_target)
        self._la = 0 # Token type
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = PhysicsParser.VarTargetContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.dottedID()
                pass

            elif la_ == 2:
                localctx = PhysicsParser.AttrTargetContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.dottedID()
                self.state = 111
                self.match(PhysicsParser.T__1)
                self.state = 112
                self.match(PhysicsParser.ID)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 113
                    self.match(PhysicsParser.T__2)
                    self.state = 114
                    self.expr()
                    self.state = 115
                    self.match(PhysicsParser.T__3)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LawDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PhysicsParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(PhysicsParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(PhysicsParser.ParamListContext,0)


        def getRuleIndex(self):
            return PhysicsParser.RULE_lawDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLawDecl" ):
                listener.enterLawDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLawDecl" ):
                listener.exitLawDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLawDecl" ):
                return visitor.visitLawDecl(self)
            else:
                return visitor.visitChildren(self)




    def lawDecl(self):

        localctx = PhysicsParser.LawDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_lawDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(PhysicsParser.T__4)
            self.state = 122
            self.match(PhysicsParser.ID)
            self.state = 123
            self.match(PhysicsParser.T__5)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8521215123456) != 0):
                self.state = 124
                self.paramList()


            self.state = 127
            self.match(PhysicsParser.T__6)
            self.state = 128
            self.match(PhysicsParser.T__7)
            self.state = 129
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LawAssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dottedID(self):
            return self.getTypedRuleContext(PhysicsParser.DottedIDContext,0)


        def ID(self):
            return self.getToken(PhysicsParser.ID, 0)

        def NL(self):
            return self.getToken(PhysicsParser.NL, 0)

        def getRuleIndex(self):
            return PhysicsParser.RULE_lawAssignStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLawAssignStmt" ):
                listener.enterLawAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLawAssignStmt" ):
                listener.exitLawAssignStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLawAssignStmt" ):
                return visitor.visitLawAssignStmt(self)
            else:
                return visitor.visitChildren(self)




    def lawAssignStmt(self):

        localctx = PhysicsParser.LawAssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lawAssignStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(PhysicsParser.T__8)
            self.state = 132
            self.dottedID()
            self.state = 133
            self.match(PhysicsParser.T__9)
            self.state = 134
            self.match(PhysicsParser.ID)
            self.state = 135
            self.match(PhysicsParser.T__10)
            self.state = 136
            self.match(PhysicsParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrAssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dottedID(self):
            return self.getTypedRuleContext(PhysicsParser.DottedIDContext,0)


        def ID(self):
            return self.getToken(PhysicsParser.ID, 0)

        def NL(self):
            return self.getToken(PhysicsParser.NL, 0)

        def expr(self):
            return self.getTypedRuleContext(PhysicsParser.ExprContext,0)


        def getRuleIndex(self):
            return PhysicsParser.RULE_attrAssignStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttrAssignStmt" ):
                listener.enterAttrAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttrAssignStmt" ):
                listener.exitAttrAssignStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrAssignStmt" ):
                return visitor.visitAttrAssignStmt(self)
            else:
                return visitor.visitChildren(self)




    def attrAssignStmt(self):

        localctx = PhysicsParser.AttrAssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attrAssignStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.dottedID()
            self.state = 139
            self.match(PhysicsParser.T__11)
            self.state = 140
            self.match(PhysicsParser.ID)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 141
                self.match(PhysicsParser.T__0)
                self.state = 142
                self.expr()


            self.state = 145
            self.match(PhysicsParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PhysicsParser.RULE_callStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CallContext(CallStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PhysicsParser.CallStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def dottedID(self):
            return self.getTypedRuleContext(PhysicsParser.DottedIDContext,0)

        def NL(self):
            return self.getToken(PhysicsParser.NL, 0)
        def argList(self):
            return self.getTypedRuleContext(PhysicsParser.ArgListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)



    def callStmt(self):

        localctx = PhysicsParser.CallStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_callStmt)
        self._la = 0 # Token type
        try:
            localctx = PhysicsParser.CallContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.dottedID()
            self.state = 148
            self.match(PhysicsParser.T__5)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 264023450845256) != 0):
                self.state = 149
                self.argList()


            self.state = 152
            self.match(PhysicsParser.T__6)
            self.state = 153
            self.match(PhysicsParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SystemDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PhysicsParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(PhysicsParser.BlockContext,0)


        def getRuleIndex(self):
            return PhysicsParser.RULE_systemDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSystemDecl" ):
                listener.enterSystemDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSystemDecl" ):
                listener.exitSystemDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSystemDecl" ):
                return visitor.visitSystemDecl(self)
            else:
                return visitor.visitChildren(self)




    def systemDecl(self):

        localctx = PhysicsParser.SystemDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_systemDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(PhysicsParser.T__12)
            self.state = 156
            self.match(PhysicsParser.ID)
            self.state = 157
            self.match(PhysicsParser.T__7)
            self.state = 158
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PhysicsParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(PhysicsParser.ExprContext,0)


        def NL(self):
            return self.getToken(PhysicsParser.NL, 0)

        def block(self):
            return self.getTypedRuleContext(PhysicsParser.BlockContext,0)


        def returnType(self):
            return self.getTypedRuleContext(PhysicsParser.ReturnTypeContext,0)


        def paramList(self):
            return self.getTypedRuleContext(PhysicsParser.ParamListContext,0)


        def getRuleIndex(self):
            return PhysicsParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = PhysicsParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8521215123456) != 0):
                self.state = 160
                self.returnType()


            self.state = 163
            self.match(PhysicsParser.T__13)
            self.state = 164
            self.match(PhysicsParser.ID)
            self.state = 165
            self.match(PhysicsParser.T__5)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8521215123456) != 0):
                self.state = 166
                self.paramList()


            self.state = 169
            self.match(PhysicsParser.T__6)
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.state = 170
                self.match(PhysicsParser.T__14)
                self.state = 171
                self.expr()
                self.state = 172
                self.match(PhysicsParser.NL)
                pass
            elif token in [8]:
                self.state = 174
                self.match(PhysicsParser.T__7)
                self.state = 175
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PhysicsParser.ParamContext)
            else:
                return self.getTypedRuleContext(PhysicsParser.ParamContext,i)


        def getRuleIndex(self):
            return PhysicsParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):
